--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MAILER_DSN=smtp://fb91d8a279f538:a76f3d1753887f:25?encryption=&auth_mode=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/liveSymfony?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev_web?"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
