--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 ###> liip/imagine-bundle ###
 /public/media/cache/
 ###< liip/imagine-bundle ###
+public/uploads/images/products/626ae9ce88f1d357252982.jpg
