--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /public/media/cache/
 ###< liip/imagine-bundle ###
 public/uploads/images/products/626ae9ce88f1d357252982.jpg
+public/uploads/images/products/626b24c43a0f6804677067.jpg
