--- a/.env
+++ b/.env
@@ -39,3 +39,8 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/liveSymfony?serverVersion=5.7"
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://dina.benmansour@esprit.tn:191JFT2415@localhost
 ###< symfony/swiftmailer-bundle ###
+
+### sms ###
+ twilio_sid='AC773dffcfdc1fb13b3ffe9fe55b5ce526'
+ twilio_token='a3ae9608374ce5e59332cc244157dfa0'
+ twilio_number='+15706001220'
