--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^2.2",
         "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^3.2",
+        "endroid/qr-code-bundle": "^4.0",
         "friendsofsymfony/ckeditor-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^5.4",
         "liip/imagine-bundle": "^2.6",
@@ -41,8 +42,10 @@
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
         "symfonycasts/reset-password-bundle": "^1.8",
+        "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
+        "twilio/sdk": "^6.36",
         "vich/uploader-bundle": "^1.18"
     },
     "require-dev": {
