--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,12 +5,17 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     app.path.product_images: /uploads/images/products
+    app.path.messages_contracts: /uploads/files/user/contracts
+    twilio_number: '%env(TWILIO_NUMBER)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+    # twilio
+        
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -27,6 +32,14 @@ services:
     App\Controller\:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
+    # config/services.yaml
+    twilio.client:
+            class: Twilio\Rest\Client
+            arguments: ['%env(TWILIO_ACCOUNT_SID)%', '%env(TWILIO_AUTH_TOKEN)%']
+
+    Twilio\Rest\Client: '@twilio.client'
+
+   
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
