--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "endroid/installer": true
         },
         "platform": {
             "php": "8.0.15"
